--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -38,4 +38,4 @@ jobs:
     - name: '😾 Lint with flake8'
       run: |
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 . --count --ignore=C901 --max-complexity=15 --max-line-length=120 --statistics
+        flake8 . --count --ignore=C901,F403,F405,W504 --max-complexity=15 --max-line-length=120 --statistics
