github: Update workflows
Signed-off-by: iabdalkader <i.abdalkader@gmail.com>

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -54,3 +54,8 @@ jobs:
         body: ${{steps.changelog.outputs.changelog}}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: '📦 Publish to PyPI'
+      uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        password: ${{ secrets.PYPI_API_TOKEN }}
