--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -21,6 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     permissions:
+      contents: write
       id-token: write
     steps:
     - name: '⏳ Checkout repository'
